- Added: If a M113 Command is used as MHQ in the Global Mobilization version deploy the antenna too when the MHQ gets deployed
- Added: Mercenary settings available for all maps (2035 experimental), by longtimegamer
- Added: New viewdistance option sets client to initial server value but player may change later (a server hint for player viewdistance), by longtimegamer
- Changed: Civilians spawned with occupy script can be on upper floors, by longtimegamer
- Fixed: If a camp is destroyed (which shouldn't happen but meh) it will be recreated
- Fixed: Some targets in the Western Sahara version were still using Malden names
- Fixed: Base wasn't mentioned in Auto change viewdistance string in the Status Dialog/Dashboard
- Fixed: Don't throw an error messages when Domination.sqf for InterceptDB is found but InterceptDB is not loaded
- Fixed: Vehicle respawn script could break if vehcile locked status wasn't correct
- Fixed: Script error when accessing a non existing pylon array in fn_skinpolyresp.sqf
- Fixed: If no squad leader was available for respawn/spawn the the marker was still drawn resulting in an error message
- Fixed: Added SOG Prarie Fire remoteExec functions to CfgRemoteExec in description.ext
- Fixed: Snipers do not spawn on roof, by longtimegamer
- Fixed: Occupy script places all units in a group and does not delete units, by longtimegamer
- Fixed: Do not spawn guerrilla events if d_with_MainTargetEvents == -1 "always"
- Fixed: When a plane without VTOL was used for dropping para units over main targets it sometimes tried to land like a chopper or VTOL at the AO
- Fixed: Do not spawn civilians near enemy units, by longtimegamer
- Fixed: CAS fired eventhandler was called when arty fired
- Fixed: Players get moved out of base artillery and AA vehicles if they somehow manage to get into them
- Fixed: UAV triggers main target events, by longtimegamer
- Fixed: Use building blacklist for enemy units as well as civilians, by longtimegamer