@@ -20,11 +20,13 @@ if (isMultiplayer && {hasInterface}) then {
 enableSaving [false,false];
 enableTeamSwitch false;
 
+private _year = -1;
 #ifdef __IFA3__
 if (isServer) then {
 	diag_log ["DOM init.sqf, setting date back to 1944..."];
 	private _date = date;
 	_date set [0, 1944];
+	_year = 1944;
 	setDate _date;
 };
 #endif
@@ -33,6 +35,7 @@ if (isServer) then {
 	diag_log ["DOM init.sqf, setting date back to 1971..."];
 	private _date = date;
 	_date set [0, 1971];
+	_year = 1971;
 	setDate _date;
 };
 #endif
@@ -41,10 +44,17 @@ if (isServer) then {
 	diag_log ["DOM init.sqf, setting date back to 1971..."];
 	private _date = date;
 	_date set [0, 1971];
+	_year = 1971;
 	setDate _date;
 };
 #endif
 
-// addMissionEventHandler ["EntityCreated", {diag_log _this}];
+if (d_use_systemtime == 1) then {
+	private _st = systemTime;
+	if (_year != -1) then {
+		_year = _st # 0;
+	};
+	setDate [_year, _st # 1, _st # 2, _st # 3, _st # 4];
+};
 
 diag_log [diag_frameno, diag_ticktime, time, "Dom init.sqf processed"];
